src/objects/AstrumTIME_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>AstrumTIME - Parameters</description>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Baltimore_County__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient for Baltimore County</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient for Baltimore County</inlineHelpText>
        <label>COEF BONUS ELECTRIC Baltimore County</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Distance_Hours__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient Distance Hours</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient Distance Hours</inlineHelpText>
        <label>COEF BONUS ELECTRIC Distance Hours</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Flat_Roof__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient for Flat Roof</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient for Flat Roof</inlineHelpText>
        <label>COEF BONUS ELECTRIC Flat Roof</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Ground_Mount__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient for Ground Mount</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient for Ground Mount</inlineHelpText>
        <label>COEF BONUS ELECTRIC Ground Mount</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Inside_Only_Conduit__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient for Inside Only Conduit</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient for Inside Only Conduit</inlineHelpText>
        <label>COEF BONUS ELECTRIC Inside Only Conduit</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Intercept__c</fullName>
        <description>ELECTRICIAN Bonus Program Coeffient for Intercept</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coeffient for Intercept</inlineHelpText>
        <label>COEF BONUS ELECTRIC Intercept</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Num_Installers__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient for Number of Electricians</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient for Number of Electricians</inlineHelpText>
        <label>COEF BONUS ELECTRIC Num Electricians</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Num_Panels__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient for Number of Panels</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient for Number of Panels</inlineHelpText>
        <label>COEF BONUS ELECTRIC Num Panels</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_ELECTRIC_Outbuilding_Install__c</fullName>
        <description>ELECTRICIAN Bonus Program Coefficient for Outbuilding Install</description>
        <inlineHelpText>ELECTRICIAN Bonus Program Coefficient for Outbuilding Install</inlineHelpText>
        <label>COEF BONUS ELECTRIC Outbuilding Install</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_Hotel_Cost__c</fullName>
        <description>Bonus Program Install Hours - Coefficient for Calculating How Many Hours A Hotel Stay Counts For</description>
        <inlineHelpText>Bonus Program Install Hours - Coefficient for Calculating How Many Hours A Hotel Stay Counts For</inlineHelpText>
        <label>COEF BONUS Hotel Cost</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Distance_Hours__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Distance From Office Hours Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Distance From Office Hours Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Distance Hours</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Flat_Roof__c</fullName>
        <description>INSTALLER Bonus Program Coefficient for Flat Roof</description>
        <inlineHelpText>INSTALLER Bonus Program Coefficient for Flat Roof</inlineHelpText>
        <label>COEF BONUS INSTALLER Flat Roof</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Ground_Mount__c</fullName>
        <description>INSTALLER Bonus Program Coefficient for Ground Mount</description>
        <inlineHelpText>INSTALLER Bonus Program Coefficient for Ground Mount</inlineHelpText>
        <label>COEF BONUS INSTALLER Ground Mount</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Intercept__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Intercept Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Intercept Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Intercept</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Num_Installers__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Number of Installers Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Number of Installers Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Num Installers</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Num_Panels__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Number of Panels Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Number of Panels Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Num Panels</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Num_Roofs__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Number of Roofs Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Number of Roofs Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Num Roofs</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Num_Stories__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Number of Stories Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Number of Stories Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Num Stories</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Roof_Pitch__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Degrees of Roof Pitch Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Degrees of Roof Pitch Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Roof Pitch</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Trenching_Req__c</fullName>
        <description>INSTALLER Bonus Program Install Hours - Trenching Required Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours - Trenching Required Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Trenching Req</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_INSTALLER_Vent_Stack_Move__c</fullName>
        <description>INSTALLER Bonus Program Install Hours -Vent Stack Movement Coefficient</description>
        <inlineHelpText>INSTALLER Bonus Program Install Hours -Vent Stack Movement Coefficient</inlineHelpText>
        <label>COEF BONUS INSTALLER Vent Stack Move</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_Maintenance_After_Month__c</fullName>
        <description>Bonus Program Install Hours - How Many Standard Hours Does an Maintenance Hour AFTER 1 Month Count For?</description>
        <inlineHelpText>Bonus Program Install Hours - How Many Standard Hours Does an Maintenance Hour AFTER 1 Month Count For?</inlineHelpText>
        <label>COEF BONUS Maintenance After Month</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_Maintenance_Within_Month__c</fullName>
        <description>Bonus Program Install Hours - How Many Standard Hours Does an Maintenance Hour WITHIN 1 Month Count For?</description>
        <inlineHelpText>Bonus Program Install Hours - How Many Standard Hours Does an Maintenance Hour WITHIN 1 Month Count For?</inlineHelpText>
        <label>COEF BONUS Maintenance Within Month</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COEF_BONUS_Overtime_Hour_Multiplier__c</fullName>
        <description>Bonus Program Install Hours - How Many Standard Hours Does an Overtime Hour Count For?</description>
        <inlineHelpText>Bonus Program Install Hours - How Many Standard Hours Does an Overtime Hour Count For?</inlineHelpText>
        <label>COEF BONUS Overtime Hour Multiplier</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONST_BONUS_ELECTRIC_Electrician_Per_Job__c</fullName>
        <description>ELECTRICIAN CONSTANT - Number of Electricians Assumed to Be on Each Job</description>
        <inlineHelpText>ELECTRICIAN CONSTANT - Number of Electricians Assumed to Be on Each Job</inlineHelpText>
        <label>CONST BONUS ELECTRIC Electrician Per Job</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONST_BONUS_INSTALLER_Installers_Per_Job__c</fullName>
        <description>INSTALLER Constant - Number of Installers Assumed on Each Job</description>
        <inlineHelpText>INSTALLER Constant - Number of Installers Assumed on Each Job</inlineHelpText>
        <label>CONST BONUS INSTALLER Installers Per Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONST_BONUS_Ops_Manager_Amount__c</fullName>
        <description>Bonus Program Install Hours - Amount Awarded ($) to Ops Manager for every hour under budgeted goal for Office</description>
        <inlineHelpText>Bonus Program Install Hours - Amount Awarded ($) to Ops Manager for every hour under budgeted goal for Office</inlineHelpText>
        <label>CONST BONUS Ops Manager Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CONST_BONUS_Team_Distribution_Amount__c</fullName>
        <description>Bonus Program Install Hours - Amount Awarded ($) to Team for distribution for every hour under budgeted goal</description>
        <inlineHelpText>Bonus Program Install Hours - Amount Awarded ($) to Team for distribution for every hour under budgeted goal</inlineHelpText>
        <label>CONST BONUS Team Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CONST_BONUS_Team_Lead_Amount__c</fullName>
        <description>Bonus Program Install Hours - Amount Awarded ($) to Team Lead for every hour under budgeted goal</description>
        <inlineHelpText>Bonus Program Install Hours - Amount Awarded ($) to Team Lead for every hour under budgeted goal</inlineHelpText>
        <label>CONST BONUS Team Lead Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AstrumTIME - Settings</label>
</CustomObject>